src/objects/Test_Form__c.object
<CustomObject>
    <description>The test form is used to store information about a test.  It contains a description as well as summary information.  Test forms are created and managed by an exam administrator.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Exam Templates, and therefore Examinations are specific to the Accounts that they are for.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Exam_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description contains an extended description of the exam name including pre-requisites and the intended exam taker.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passing_Score__c</fullName>
        <defaultValue>0.70</defaultValue>
        <description>The passing score for this exam.</description>
        <label>Passing Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Test_Status__c</fullName>
        <description>The test status field indicates whether a test is Draft, Open (available to take), Closed, or Obsolete.</description>
        <label>Test Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Test Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Obsolete_Tests_are_final</fullName>
        <active>true</active>
        <description>Prevents the status of Obsolete exams from being changed.</description>
        <errorConditionFormula>AND(ISCHANGED(Test_Status__c),ISPICKVAL(PRIORVALUE(Test_Status__c),&apos;Obsolete&apos;))</errorConditionFormula>
        <errorMessage>Exam Status cannot be changed once the status is set to &apos;Obsolete&apos;.</errorMessage>
    </validationRules>
</CustomObject>